Changed title to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@ body {
 </style>
 </body>
 
+<div places = "dropdown">
+  <button places = "dropbtn">Dropdown</button>
+  <div places = "dropdown-content">
+    <a href = "shkoder.html" > Shkoder</a>
+  </div>
+</div>
+
+
 <body>
   <h1><center><u><em>Welcome to Albania Travel!</em></u></center></h1>
   <img src="albania.jpg"height="500" width="700">
