--- a/shkoder.html
+++ b/shkoder.html
@@ -39,10 +39,8 @@ body {
       <p><center><h1>Traditional Cuisine:</h1></center></<p>
         <p><strong><li>Byrek</li></strong></p>
           <p>Byrek is made of baked thin flaky dough and is filled with cheese, beef, chicken, etc.</p>
-        <p><strong><li>Byrek</li></strong></p>
-        <p><strong><li>Byrek</li></strong></p>
-        <p><strong><li>Byrek</li></strong></p>
-        <p><strong><li>Byrek</li></strong></p>
+        <p><strong><li>Tave Kosi</li></strong></p>
+          <p>Tave Kosi is a dish of lamb and rice baked with a mixture of yogurt and eggs added to a roux.</p>
     </body>
     </html>
 
